--- a/.github/workflows/ncbi_sra_etl.yaml
+++ b/.github/workflows/ncbi_sra_etl.yaml
@@ -1,16 +1,37 @@
 name: ETL for NCBI SRA
-on: 
+on:
   workflow_dispatch:
   schedule:
-    # * is a special character in YAML so you have to quote this string
+    # Run daily at 5am UTC
     - cron:  '0 5 * * *'
 
 jobs:
-  call-reusable-workflow:
+  sra-extraction:
     permissions:
       contents: 'read'
       id-token: 'write'
-    uses: ./.github/workflows/base_runner.yaml
-    with:
-      module_to_run: 'omicidx_etl.sra.etl'
-    secrets: inherit
+    runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      AWS_PROFILE: ${{ secrets.AWS_PROFILE }}
+      AWS_ENDPOINT_URL: ${{ secrets.AWS_ENDPOINT_URL }}
+      AWS_URL_STYLE: ${{ secrets.AWS_URL_STYLE }}
+      OMICIDX_BASE_PATH: ${{ secrets.OMICIDX_BASE_PATH }}
+
+    steps:
+      - uses: 'actions/checkout@v4'
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+
+      - name: Install dependencies
+        run: uv sync
+
+      - name: Run SRA extraction
+        run: uv run oidx sraextract
