--- a/.github/workflows/ncbi_biosample.yaml
+++ b/.github/workflows/ncbi_biosample.yaml
@@ -12,5 +12,5 @@ jobs:
       id-token: 'write'
     uses: ./.github/workflows/base_runner.yaml
     with:
-      module_to_run: 'omicidx_etl.biosample.etl'
+      command_to_run: 'uv run oidx biosample extract'
     secrets: inherit
