--- a/.github/workflows/ncbi_biosample.yaml
+++ b/.github/workflows/ncbi_biosample.yaml
@@ -12,5 +12,6 @@ jobs:
       id-token: 'write'
     uses: ./.github/workflows/base_runner.yaml
     with:
-      command_to_run: 'uv run oidx biosample extract'
+      command_to_run: |
+        uv run oidx biosample extract ${{ secrets.OMICIDX_BASE_PATH }}/biosample
     secrets: inherit
