--- a/.github/workflows/ncbi_biosample.yaml
+++ b/.github/workflows/ncbi_biosample.yaml
@@ -1,16 +1,36 @@
-name: ETL for biosample
-on: 
+name: ETL for NCBI Biosample
+on:
   workflow_dispatch:
   schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron:  '0 1 * * *'
+    # Run daily at 6am UTC
+    - cron:  '0 6 * * *'
 
 jobs:
-  call-reusable-workflow:
+  run-extraction:
     permissions:
       contents: 'read'
       id-token: 'write'
-    uses: ./.github/workflows/base_runner.yaml
-    with:
-      command_to_run: uv run oidx biosample extract ${{ secrets.OMICIDX_BASE_PATH }}/biosample
-    secrets: inherit
+    runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      AWS_ENDPOINT_URL: ${{ secrets.AWS_ENDPOINT_URL }}
+      AWS_URL_STYLE: ${{ secrets.AWS_URL_STYLE }}
+      OMICIDX_BASE_PATH: ${{ secrets.OMICIDX_BASE_PATH }}
+
+    steps:
+      - uses: 'actions/checkout@v4'
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+
+      - name: Install dependencies
+        run: uv sync
+
+      - name: Run GEO extraction
+        run: uv run oidx biosample extract ${{ secrets.OMICIDX_BASE_PATH }}/biosample
