Adds periodic heartbeat logging during extraction
Introduces a background heartbeat that logs progress at regular intervals to improve visibility into long-running extraction tasks. Also ensures unbuffered Python output for real-time log streaming in CI environments.

--- a/.github/workflows/ncbi_biosample.yaml
+++ b/.github/workflows/ncbi_biosample.yaml
@@ -18,6 +18,7 @@ jobs:
       AWS_ENDPOINT_URL: ${{ secrets.AWS_ENDPOINT_URL }}
       AWS_URL_STYLE: ${{ secrets.AWS_URL_STYLE }}
       OMICIDX_BASE_PATH: ${{ secrets.OMICIDX_BASE_PATH }}
+      PYTHONUNBUFFERED: 1 # Ensure real-time logging output
 
     steps:
 
