--- a/.github/workflows/ncbi_biosample.yaml
+++ b/.github/workflows/ncbi_biosample.yaml
@@ -52,4 +52,4 @@ jobs:
         run: uv sync
 
       - name: Run extraction
-        run: uv run oidx biosample extract ${{ secrets.OMICIDX_BASE_PATH }}/biosample
+        run: uv run oidx biosample extract s3://$OMICIDX_BASE_PATH
